--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,25 @@
 <!-- Home page templates contained in here  -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TO-Do-List</title>
+    <link rel="stylesheet" href="/public/styles.css">
+</head>
+<body>
+    <h1>To-Do-List</h1>
+    <form action="/add" method="post">
+        <input type="text" name="toDo" placeholder="Enter a new To Do" required>
+        <input type="text">
+        <input type="submit" value="Publish">
+    </form>
+    <ul>
+        <% tasklist.forEach(function(task) { %>
+            <li><%= task %> </li>
+      <%  }); %>
+    </ul>
+    
+</body>
+</html>
