--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,8 @@
 </head>
 <body>
     <h1>To-Do-List</h1>
-    <form action="/add" method="post">
-        <input type="text" name="toDo" placeholder="Enter a new To Do" required>
-        <input type="text">
+    <form id="taskForm" action="/add" method="POST">
+        <input type="text" name="newTask" required>
         <input type="submit" value="Publish">
     </form>
     <ul>
@@ -20,6 +19,17 @@
             <li><%= task %> </li>
       <%  }); %>
     </ul>
+
+    // Redirect to login if not logged in
+    <script>
+        if (!localStorage.getItem('todoUser')) {
+        window.location.href = 'login.html';
+        }
+
+    </script>
+
+
+
     
 </body>
 </html>
